--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,10 @@ services:
     image: postgres:11-alpine
     restart: unless-stopped
     environment:
-      POSTGRES_DB: n8n
-      POSTGRES_USER: root
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_NON_ROOT_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_NON_ROOT_USER: n8n
+      POSTGRES_NON_ROOT_USER: ${POSTGRES_NON_ROOT_PASSWORD}
       POSTGRES_NON_ROOT_PASSWORD: ${POSTGRES_NON_ROOT_PASSWORD}
     volumes:
       - ./init-data.sh:/docker-entrypoint-initdb.d/init-data.sh
