--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,10 @@
 DATA_DIR=./data
 
 # db
+POSTGRES_USER=
 POSTGRES_PASSWORD=
+POSTGRES_DB=
+POSTGRES_NON_ROOT_USER=
 POSTGRES_NON_ROOT_PASSWORD=
 
 # n8n
