--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.1"
 
 services:
   postgres:
-    image: postgres:11-alpine
+    image: postgres:11
     restart: unless-stopped
     environment:
       POSTGRES_DB: ${POSTGRES_DB}
